fix: subgrid left margn to align text

--- a/src/content/LandingPage/_overrides.scss
+++ b/src/content/LandingPage/_overrides.scss
@@ -14,6 +14,5 @@
 
 .cds--subgrid--wide {
   //fix needed to keep the subgrid from scrolling horizontally
-  margin-left: 1rem;
   margin-right: 1rem;
 }
